# tts-calibration

./: .env.example  .gitignore  docker-compose.yml
firmware/: CMakeLists.txt  README.md  build.sh  partitions.csv  sdkconfig.defaults  sdkconfig.local.example  serial_monitor.py  serial_reset_monitor.py
firmware/components/esp_micro_speech_features/: CMakeLists.txt
firmware/components/jarvis_audio/: CMakeLists.txt  idf_component.yml  jarvis_audio.cpp  jarvis_wakeword_model.c  jarvis_wakeword_model.h  jarvis_wakeword_model_custom_jarvis.c.bak
firmware/components/jarvis_audio/include/: jarvis_audio.h
firmware/components/jarvis_codec/: CMakeLists.txt  es8311.c  jarvis_codec.c
firmware/components/jarvis_codec/include/: es8311.h  jarvis_codec.h
firmware/components/jarvis_display/: CMakeLists.txt  jarvis_display.c
firmware/components/jarvis_display/include/: jarvis_display.h  jarvis_icons.h
firmware/components/jarvis_network/: CMakeLists.txt  jarvis_network.c
firmware/components/jarvis_network/include/: jarvis_network.h
firmware/components/jarvis_speaker/: CMakeLists.txt  jarvis_speaker.c
firmware/components/jarvis_speaker/include/: jarvis_speaker.h  wake_sound_data.h
firmware/components/jarvis_ws_audio/: CMakeLists.txt  jarvis_ws_audio.c
firmware/components/jarvis_ws_audio/include/: jarvis_ws_audio.h
firmware/components/json/: CMakeLists.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  jarvis_config.h  main.cpp
firmware/model_data/: jarvis_it.tflite  jarvis_it.yaml
infra/ansible/: inventory.yml  playbook.yml
infra/terraform/: main.tf
server/: Dockerfile  phrases.py  requirements.txt  server.py
